--- a/components/our-customers/css/style.css
+++ b/components/our-customers/css/style.css
@@ -27,6 +27,101 @@
 .container_our_customers .btn_todos{
     margin: 60px 0 25px 0;
 }
+.box-our-customers.active{
+    margin-bottom: 30px;
+}
+.box-our-customers.box_with_case:before, .box-our-customers.box_with_case:after {
+    content: '';
+    position: absolute;
+    bottom: -0px;
+    left: 50%;
+    width: 0;
+    height: 0;
+    -webkit-transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    -o-transition: all ease 0.3s;
+    transition: all ease-out 0.3s;
+    opacity:  0;
+}
+
+.box-our-customers.box_with_case:before {
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 19px solid #D8D8D8;
+    margin-left: -18px;
+    z-index: 9;
+}
+.box-our-customers.box_with_case:after {
+    border-left: 19px solid transparent;
+    border-right: 19px solid transparent;
+    border-bottom: 19px solid #f4f6f8;
+    margin-left: -17px;
+    z-index: 10;
+}
+.box-our-customers.box_with_case.active:before, .box-our-customers.box_with_case.active:after {
+    opacity: 1;
+}
+.box-our-customers.box_with_case.active:before {
+    bottom: -41px;
+}
+.box-our-customers.box_with_case.active:after {
+    bottom: -42px;
+}
+.box-info-customer{
+    display: none;
+    position: relative;
+}
+.close-box-info-customer{
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    width: 30px;
+    height: 30px;
+    background: url(../../../template/images/icons.png) no-repeat -337px 0;
+    z-index: 9;
+    cursor: pointer;
+}
+.info-customer {
+    background: #f4f6f8;
+    border: solid 0 transparent;
+    border-radius: 5px;
+    margin-bottom: 0;
+
+    margin-top: 10px;
+    padding: 40px 45px;
+    opacity: 1;
+    max-height: 1000px;
+    border: solid 1px #d8d8d8;
+}
+.info-customer p{
+    font-size: 14px;
+    margin-bottom:0;
+}
+.info-customer-video .info-customer-desc{
+    max-width: 55%;
+    display: inline-block;
+}
+.info-customer-video iframe{
+    float: right;
+}
+.info-customer p.text-testimony{
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+.info-customer a{
+    color: #57585a;
+    text-decoration: underline;
+    padding: 15px 0;
+    display: inline-block;
+    margin: 15px 40px 45px 0;
+}
+.info-customer a:hover{
+    color: #FF125B;
+}
+.info-customer a img{
+    margin-right: 10px;
+    position: relative
+}
 /* end our-customers */ 
 
 /* RESPONSIVE */
@@ -35,7 +130,7 @@
         margin-bottom: 30px;
     }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     .box-our-customers-center {
         margin-bottom: 15px;
     }
@@ -48,5 +143,34 @@
     .container_our_customers .btn_todos{
         margin-top: 10px;
     }
+    .info-customer {
+        padding: 25px 30px;
+    }
+    .info-customer a{
+        margin: 5px 40px 0px 0;
+    }
+    .info-customer p.text-testimony {
+        margin-bottom: 20px;
+    }
+    .info-customer-video .info-customer-desc {
+        max-width: 100%;
+    }
+    .info-customer-video iframe {
+        width: 100%;
+        float: none;
+        margin-top: 25px;
+    }
 }
+@media screen and (max-width: 450px) {
+    .info-customer a {
+        display: block;
+        padding: 5px 0;
+    }
+    .info-customer p.text-testimony {
+        margin-top: 10px;
+        font-size: 15px;
+    }
+}
+
+
 /* END RESPONSIVE */
