--- a/template/css/style.css
+++ b/template/css/style.css
@@ -37,7 +37,7 @@
 *{
     font-family: 'open_sansregular'; 
 }
-body{
+body, html{
     width: 100%;
     overflow-x: hidden;
 }
@@ -158,7 +158,7 @@ label{
     width: 100%;
     cursor: pointer;
 }
-.btn, .btn:hover{
+.btn, .btn:hover, .btn.focus, .btn:focus, .btn:hover{
     color: #fff;
     border: none;
     font-family: 'open_sansbold';
