--- a/template/css/style.css
+++ b/template/css/style.css
@@ -55,6 +55,12 @@ body, html{
 .no-padding{
     padding: 0;
 }
+.no-pd-t{
+    padding-top: 0;
+}
+.no-pd-b{
+    padding-bottom: 0;
+}
 .no-pd-l{
     padding-left: 0;
 }
@@ -158,6 +164,34 @@ label{
     width: 100%;
     cursor: pointer;
 }
+label.label-left{
+    margin-top: 0;
+    color: #808285;
+    white-space: nowrap;
+}
+.form-horizontal label.no-pd-t{
+    padding-top: 0;
+    line-height: 17px;
+}
+.form-group .btn{
+    margin-top: 15px;
+}
+input.error, input.error:focus{
+    border-color: #FF0000;
+}
+input.error ~ label{
+    color: #FF0000;
+    font-size: 10px;
+    position: absolute;
+    top: 20px;
+    margin-bottom: 0;
+    width: 100%;
+    padding-right: 15px;
+}
+.control-label.label-required{
+    font-size: 12px;
+    text-align: left;
+}
 .btn, .btn:hover, .btn.focus, .btn:focus, .btn:hover{
     color: #fff;
     border: none;
@@ -200,9 +234,25 @@ label{
 .btn-orange2:hover{
     background-color: #EF9613;
 }
-
 .form-control[readonly]{
     background: #fff;
+}
+input.input-upload-file{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+.text-input-file{
+    background: url(../images/bg_search.png) no-repeat right 8px top 5px #fff;
+    padding-right: 33px;
 }
 /* CHECKBOX */
 /* Base for label styling */
@@ -222,6 +272,10 @@ label{
 }
 .container_search_customers .box-checkbox.box-radios label{
     padding-left: 0;
+    margin-top: 0;
+}
+.box-radios label{
+    margin-top: 0;
 }
 /* box checkbox */
 [type="checkbox"]:not(:checked) + label:before,
@@ -266,7 +320,7 @@ label{
 }
 [type="checkbox"]:checked + label:after {
     opacity: 1;
-    
+
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -o-transform: scale(1);
@@ -479,12 +533,12 @@ ul.dropdown-menu:before {
     height: 20px;
     background: #FFF;
     transform: rotate(45deg);
-    
+
     -webkit-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
     -o-transform: rotate(45deg);
     transform: rotate(45deg);
-   
+
     top: -10px;
     left: 50%;
     margin-left: -10px;
@@ -604,7 +658,7 @@ a.btn_social_media, .change a.btn_social_media{
 }
 .box_social_media{
     width: 151px;
-        text-align: right;
+    text-align: right;
 }
 a.btn_social_media.btn_linkedin{
     background-position: -124px center;
