Criação de componentes 29/10/2015 - 9:26

--- a/components/box-partners/css/style.css
+++ b/components/box-partners/css/style.css
@@ -41,6 +41,9 @@
     }
 }
 @media screen and (max-width: 991px) {
+    .box-partners{
+        margin-top: 30px;
+    }
     .row-box-partners{
         margin: 0 -7px;
     }
