--- a/components/work-with-us/css/style.css
+++ b/components/work-with-us/css/style.css
@@ -25,6 +25,7 @@
 }
 .box-form-work-with-us .control-label.label-required{
     margin-top: 22px;
+    text-align: left;
 }
 .container-work-with-us hr{
     margin-top: 0;
